--- a/Cliente/4/c/ejercicio4c.html
+++ b/Cliente/4/c/ejercicio4c.html
@@ -8,12 +8,33 @@
     <link rel="stylesheet" href="ejercicio4c.css">
 </head>
 <body>
-    <input type="number" id="num">
-    <br><br>
-    <button onclick="conversor('£')">£</button>
-    <button onclick="conversor('¥')">¥</button>
-    <button onclick="conversor('$')">$</button>
-    <br><br>
-    <input type="number" id="result" disabled>
+    <br>
+    <table>
+        <tr>
+            <td>
+                <img src="eur.svg" alt="europa" width="185px">
+            </td>
+            <td>
+                <hr>
+            </td>
+            <td>
+                <img id="img" src="" alt="" width="180px" hidden>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="number" id="num">
+            </td>
+            <td>
+                <button onclick="conversor('£')">£</button>
+                <button onclick="conversor('¥')">¥</button>
+                <button onclick="conversor('$')">$</button>
+            </td>
+            <td>
+                <input type="number" id="result" disabled>
+            </td>
+        </tr>
+    </table>    
 </body>
 </html>
