--- a/Cliente/4/c/ejercicio4c.html
+++ b/Cliente/4/c/ejercicio4c.html
@@ -9,32 +9,35 @@
 </head>
 <body>
     <br>
-    <table>
-        <tr>
-            <td>
-                <img src="eur.svg" alt="europa" width="185px">
-            </td>
-            <td>
-                <hr>
-            </td>
-            <td>
-                <img id="img" src="" alt="" width="180px" hidden>
-            </td>
-        </tr>
-
-        <tr>
-            <td>
-                <input type="number" id="num">
-            </td>
-            <td>
-                <button onclick="conversor('£')">£</button>
-                <button onclick="conversor('¥')">¥</button>
-                <button onclick="conversor('$')">$</button>
-            </td>
-            <td>
-                <input type="number" id="result" disabled>
-            </td>
-        </tr>
-    </table>    
+    <div>
+        <h1>Conversor</h1>
+        <table>
+            <tr>
+                <td>
+                    <img src="eur.svg" alt="europa" width="185px">
+                </td>
+                <td>
+                    <hr>
+                </td>
+                <td>
+                    <img id="img" src="" alt="" width="180px" hidden>
+                </td>
+            </tr>
+    
+            <tr>
+                <td>
+                    <input type="number" id="num">
+                </td>
+                <td>
+                    <button onclick="conversor('£')">£</button>
+                    <button onclick="conversor('¥')">¥</button>
+                    <button onclick="conversor('$')">$</button>
+                </td>
+                <td>
+                    <input type="number" id="result" disabled>
+                </td>
+            </tr>
+        </table>    
+    </div>
 </body>
 </html>
