--- a/Cliente/5/c/ejercicioC.html
+++ b/Cliente/5/c/ejercicioC.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <select name="mes" id="mes" onchange="diaMes()">
+    <select name="mes" id="mes" oninput="diaMes()">
         <option value="enero">Enero</option>
         <option value="febrero">Febrero</option>
         <option value="marzo">Marzo</option>
