--- a/Cliente/4/c/ejercicio4c.html
+++ b/Cliente/4/c/ejercicio4c.html
@@ -4,40 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="ejercicio4c.js"></script>
-    <link rel="stylesheet" href="ejercicio4c.css">
+    <script src="ejercicio4c.js">
+        
+    </script>
 </head>
 <body>
+
+    <input type="number" id="numero">
+
+    <button onclick="potencia()">Potencia</button>
+    <button onclick="raiz()">Raiz</button>
+    <button onclick="factorial()">Factorial</button>
+
+    <hr>
+    <h1>Calculadora</h1>
+    <input type="number" id="num1"><br><br>
+    <input type="number" id="num2"><br><br>
+    -----------------------------------      
+    <button onclick="suma()"> + </button>
+    <button onclick="rest()"> - </button>
+    <button onclick="mult()"> x </button>
+    <button onclick="divi()"> / </button>
     <br>
-    <div>
-        <h1>Conversor</h1>
-        <table>
-            <tr>
-                <td>
-                    <img src="eur.svg" alt="europa" width="185px">
-                </td>
-                <td>
-                    <hr>
-                </td>
-                <td>
-                    <img id="img" src="" alt="" width="180px" hidden>
-                </td>
-            </tr>
-    
-            <tr>
-                <td>
-                    <input type="number" id="num">
-                </td>
-                <td>
-                    <button onclick="conversor('£')">£</button>
-                    <button onclick="conversor('¥')">¥</button>
-                    <button onclick="conversor('$')">$</button>
-                </td>
-                <td>
-                    <input type="number" id="result" disabled>
-                </td>
-            </tr>
-        </table>    
-    </div>
+    <br>
+    <input type="number" id="result" disabled>
+
 </body>
 </html>
