--- a/Cliente/5/a/ejercicio5a.html
+++ b/Cliente/5/a/ejercicio5a.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calcular la Media de Notas</title>
     <script src="ejercicio5a.js"></script>
     <link rel="stylesheet" href="ejercicio5a.css">
 </head>
@@ -14,10 +14,18 @@
         <input type="text" id="nota" placeholder="Nota">
         <button onclick="anadir()">Añadir nota</button>
         <br><br>
-        <br><br>
-        <br><br>
         <input type="text" id="media" placeholder="Media" disabled>
-        <button onabort="">Calcular Media</button>   
+        <button onclick="calcularMedia()">Calcular Media</button>
+        <br><br>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Nota en Letra</th>
+                    <th>Valor Numérico</th>
+                </tr>
+            </thead>
+            <tbody id="tablaNotas"></tbody>
+        </table>
     </div>
 </body>
 </html>
