--- a/Cliente/5/h/ejercicioH.html
+++ b/Cliente/5/h/ejercicioH.html
@@ -3,14 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reloj en el Centro</title>
-    <link rel="stylesheet" href="ejercicioH.css">
+    <title>Text Files</title>
+    <link rel="stylesheet" href="ejercicioh.css">
 </head>
 <body>
-    <div id="reloj"></div>
-    <div id="progress-container">
-        <div id="progress-bar"></div>
-    </div>
-    <script src="ejercicioH.js"></script>
+    <input type="text" name="text" id="text" placeholder="Texto" oninput="escribir()">
+
+    <select name="colores" id="colores" onchange="cambiarColorTexto()">
+        <option value="black">Negro</option>
+        <option value="white">Blanco</option>
+        <option value="yellow">Amarillo</option>
+        <option value="blue">Azul</option>
+        <option value="red">Rojo</option> 
+    </select>
+    <input type="number" name="tamano" id="tamano" placeholder="Tamaño" oninput="cambiarTamanoTexto()">
+    <hr>
+    Negrita
+    <input type="checkbox" class="estilo" name="negrita" id="negrita" onchange="alternarNegrita()">
+    <br>
+    Cursiva
+    <input type="checkbox" class="estilo" name="cursiva" id="cursiva" onchange="alternarCursiva()">
+    <br>
+    Subrayado
+    <input type="checkbox" class="estilo" name="subrayado" id="subrayado" onchange="alternarSubrayado()">
+    <hr>
+    <img src="" alt="Arial" onclick="cambiarTipografia('arial')">
+    <img src="" alt="Times New Roman" onclick="cambiarTipografia('Times New Roman')">
+    <hr>
+    Color Fondo
+    <input type="color" name="color" id="bk_color" oninput="cambiarFondo()">
+    <br>
+    <br>
+    <br>
+    Color Borde:
+    <br>
+    Blanco
+    <input type="radio" name="borde" id="blanco" onchange="cambiarBorde('white')">
+    <br>
+    Negro
+    <input type="radio" name="borde" id="negro" onchange="cambiarBorde('black')">
+    <hr>
+    <input type="text" name="resultado" id="resultado" disabled>
+    <script src="ejercicioh.js"></script>
 </body>
 </html>
