--- a/Cliente/Ejercicio 2/1/ejercicio1.html
+++ b/Cliente/Ejercicio 2/1/ejercicio1.html
@@ -10,9 +10,11 @@
     <input type="number" name="quad_ancho" id="quad_ancho" placeholder="Ancho">
     <input type="number" name="quad_alto" id="quad_alto" placeholder="Alto">
     <button onclick="dibujarCuadrado()">Cuadrado</button>
+    <div id="cuadrado"></div>
     <br><br>
     <input type="number" name="diamond_alto" id="diamond_alto" placeholder="Alto">
     <button onclick="dibujarDiamante()">Diamante</button>
+    <div id="diamond"></div>
     <script src="ejercicio1.js"></script>
 </body>
 </html>
