--- a/Cliente/TresEnRaya/index.html
+++ b/Cliente/TresEnRaya/index.html
@@ -4,19 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/script.js"></script>
     <title>✖️ Tres en Raya ⭕</title>
 </head>
 <body>
-    <table>
+    <ul id="cruz">
+        <li><img src="img/cruz.png" alt="vacio" height="100" width="100" draggable="true"></li>
+        <li><img src="img/cruz.png" alt="vacio" height="100" width="100" draggable="true"></li>
+        <li><img src="img/cruz.png" alt="vacio" height="100" width="100" draggable="true"></li>
+        <li><img src="img/cruz.png" alt="vacio" height="100" width="100" draggable="true"></li>
+        <li><img src="img/cruz.png" alt="vacio" height="100" width="100" draggable="true"></li>
+    </ul>
+    <table class="tablero">
         <tr>
-            <td>⭕</td><td>⭕</td><td>⭕</td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
         </tr>
         <tr>
-            <td>⭕</td><td>⭕</td><td>⭕</td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
         </tr>
         <tr>
-            <td>⭕</td><td>⭕</td><td>⭕</td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
+            <td><img src="img/vacio.png" alt="vacio" height="100" width="100" draggable="false"></td>
         </tr>
     </table>
+    <ul id="circ">
+        <li><img src="img/circulo.png" alt="vacio" height="100" width="100" draggable="false"></li>
+        <li><img src="img/circulo.png" alt="vacio" height="100" width="100" draggable="false"></li>
+        <li><img src="img/circulo.png" alt="vacio" height="100" width="100" draggable="false"></li>
+        <li><img src="img/circulo.png" alt="vacio" height="100" width="100" draggable="false"></li>
+        <li><img src="img/circulo.png" alt="vacio" height="100" width="100" draggable="false"></li>
+    </ul>
 </body>
 </html>
