--- a/Cliente/TresEnRaya/index.html
+++ b/Cliente/TresEnRaya/index.html
@@ -45,6 +45,10 @@
         <button onclick="selectMode('pvp')"><img src="img/jugador.png" alt="pvp" height="100" draggable="false"></button>
         <button onclick="selectMode('pve')"><img src="img/ai.png" alt="pve" height="100" draggable="false"></button>
     </dialog>
+    <dialog id="resultado" onkeydown="prevenirEscape(event)">
+        <h1></h1>
+        <p></p>
+    </dialog>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
