--- a/Interfaces/ejercicios/index.html
+++ b/Interfaces/ejercicios/index.html
@@ -1,1 +1,12 @@
-<strong>Texto</strong>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enlace</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <a href="mailto:someone@example.com">Enviar</a>
+</body>
+</html>
