--- a/Interfaces/los_anillos/index.html
+++ b/Interfaces/los_anillos/index.html
@@ -22,7 +22,7 @@
     </div>
     <div>
         <h2>Índice de Capítulos</h2>
-        <img alt="Logo Índice">
+        <img src="" alt="Logo Índice">
         <ul>
             <li><a href="#personajes">Personajes</a></li>
             <li><a href="#cap_1">Capítulo 1: Una fiesta muy esperada</a></li>
