--- a/Cliente/XII/index.html
+++ b/Cliente/XII/index.html
@@ -21,8 +21,10 @@
         <input type="date" name="fecha" id="fecha" oninput="validateDate()">
         <br>
         <br>
-        <button>Enviar</button><button style="margin-left: 19px;">Reset</button>
+        <button>Enviar</button>
     </form>
+    <br>
+    <button onclick="reset()">Reset</button>
     <script src="js/script.js"></script>
 </body>
 </html>
