--- a/Interfaces/mapa/index.html
+++ b/Interfaces/mapa/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <h1>La Grieta del Invocador</h1>
     <div>
-        <map name="grieta">
-    
-        </map>
+        <img src="images/mapa.png" usemap="#image-map">
     </div>
+    <map name="image-map">
+        <area target="_blank" alt="Azul" title="Azul" href="#1" coords="172,194,70,287" shape="rect">
+        <area target="_blank" alt="Rojo" title="Rojo" href="#2" coords="301,97,381,20" shape="rect">
+        <area target="_blank" alt="Heraldo" title="Heraldo" href="#3" coords="191,94,18" shape="circle">
+        <area target="_blank" alt="Dragón" title="Dragón" href="#4" coords="306,202,14" shape="circle">
+        <area target="_blank" alt="Top" title="Top" href="#5" coords="118,182,86,187,111,65,161,44,297,37,295,57,172,62,137,84" shape="poly">
+        <area target="_blank" alt="Mid" title="Mid" href="#6" coords="171,186,188,199,300,106,289,96" shape="poly">
+        <area target="_blank" alt="Bot" title="Bot" href="#7" coords="189,260,187,287,364,276,415,226,381,105,365,104,386,220,351,252" shape="poly">
+    </map>
 </body>
 </html>
