--- a/Cliente/trimestre_2/reproductor/index.html
+++ b/Cliente/trimestre_2/reproductor/index.html
@@ -26,6 +26,11 @@
                 <input type="range" id="volume" value="1" min="0" max="2" step="1">
                 <button id="speed" value="1">Normal</button>
             </div>
+            <div>
+                <button id="prev">⏮</button>
+                Video
+                <button id="next">⏭</button>
+            </div>
         </section>
     </main>
 </body>
