--- a/Interfaces_Web/viajes/index.html
+++ b/Interfaces_Web/viajes/index.html
@@ -12,7 +12,7 @@
         <div class="viaje">
             <div class="imagen">
                 <img src="/assets/img/madrid.jpg" alt="Madrid">
-                <div class="text">Texto sobre la imagen</div>
+                <div class="text">Día 1 - 20.00 €</div>
             </div>
             <div>
                 <h2>España - 🇪🇸</h2>
@@ -52,7 +52,10 @@
             </div>
         </div>
         <div class="viaje">
-            <img src="/assets/img/roma.jpg" alt="Roma">
+            <div class="imagen">
+                <img src="/assets/img/roma.jpg" alt="Roma">
+                <div class="text">Día 2 - 30.00 €</div>
+            </div>
             <div>
                 <h2>Italia - 🇮🇹</h2>
                 <p>Italia es famosa por su arte, arquitectura, moda y cocina. Desde las ruinas del Imperio Romano hasta los canales de Venecia, Italia ofrece una rica historia y una belleza impresionante en cada rincón.</p>
@@ -89,10 +92,12 @@
                     </div>
                 </div>
             </div>
-            </div>
         </div>
         <div class="viaje">
-            <img src="/assets/img/atenas.jpg" alt="Atenas">
+            <div class="imagen">
+                <img src="/assets/img/atenas.jpg" alt="Atenas">
+                <div class="text">Día 3 - 25.00 €</div>
+            </div>
             <div>
                 <h2>Grecia - 🇬🇷</h2>
                 <p>Grecia es conocida por su historia antigua, sus islas paradisíacas y su deliciosa comida. Desde las ruinas de la Acrópolis en Atenas hasta las playas de Santorini, Grecia ofrece una experiencia única y memorable.</p>
@@ -131,7 +136,10 @@
             </div>
         </div>
         <div class="viaje">
-            <img src="/assets/img/berna.jpeg" alt="Berna">
+            <div class="imagen">
+                <img src="/assets/img/berna.jpeg" alt="Berna">
+                <div class="text">Día 4 - 35.00 €</div>
+            </div>
             <div>
                 <h2>Suiza - 🇨🇭</h2>
                 <p>Suiza es conocida por sus impresionantes paisajes alpinos, su alta calidad de vida y su chocolate delicioso. Desde los lagos cristalinos hasta las montañas nevadas, Suiza ofrece una experiencia única para los amantes de la naturaleza y la aventura.</p>
@@ -170,7 +178,10 @@
             </div>
         </div>
         <div class="viaje">
-            <img src="/assets/img/paris.avif" alt="París">
+            <div class="imagen">
+                <img src="/assets/img/paris.avif" alt="París">
+                <div class="text">Día 5 - 40.00 €</div>
+            </div>
             <div>
                 <h2>Francia - 🇫🇷</h2>
                 <p>Francia es conocida por su arte, moda, gastronomía y paisajes impresionantes. Desde la Torre Eiffel en París hasta los viñedos de Burdeos, Francia ofrece una experiencia cultural y visual inigualable.</p>
@@ -209,7 +220,10 @@
             </div>
         </div>
         <div class="viaje">
-            <img src="/assets/img/berlin.jpg" alt="Berlín">
+            <div class="imagen">
+                <img src="/assets/img/berlin.jpg" alt="Berlín">
+                <span class="text">Día 6 - 45.00 €</span>
+            </div>
             <div>
                 <h2>Alemania - 🇩🇪</h2>
                 <p>Alemania es conocida por su historia, su cultura y su tecnología avanzada. Desde los castillos de Baviera hasta la vibrante vida urbana de Berlín, Alemania ofrece una gran variedad de experiencias para todos los gustos.</p>
@@ -248,7 +262,10 @@
             </div>
         </div>
         <div class="viaje">
-            <img src="/assets/img/londres.webp" alt="Londres">
+            <div class="imagen">
+                <img src="/assets/img/londres.webp" alt="Londres">
+                <div class="text">Día 7 - 50.00 €</div>
+            </div>
             <div>
                 <h2>Reino Unido - 🇬🇧</h2>
                 <p>El Reino Unido es conocido por su rica historia, su cultura diversa y sus impresionantes paisajes. Desde los monumentos históricos de Londres hasta los paisajes escénicos de Escocia, el Reino Unido ofrece una experiencia única para todos los visitantes.</p>
