--- a/T11_Web-LeRoyMerlin/index.html
+++ b/T11_Web-LeRoyMerlin/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="header">
+        <h1>Leroy Merlín</h1>
         <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
