--- a/T11_Web-LeRoyMerlin/index.html
+++ b/T11_Web-LeRoyMerlin/index.html
@@ -17,40 +17,54 @@
             </ul>
         </nav>
     </header>
-    <article class="article">
-        <section class="section">
-            <h1 class="section-title">Productos</h1>
-            <div class="productos">
-                <div class="producto">
-                    <img src="img/llave_inglesa.jpg" alt="Producto 1" class="producto-img">
-                    <h2 class="producto-title">Llave Inglesa</h2>
-                    <p class="producto-desc">Hecha de Hierro</p>
-                    <p class="producto-price">Precio: 100$</p>
-                    <button class="producto-btn">Comprar</button>
+    <main class="main">
+        <article class="article">
+            <section class="section">
+                <h1 class="section-title">Productos</h1>
+                <div class="productos">
+                    <div class="producto">
+                        <img src="/home/user/Documentos/Practicas/T11_Web-LeRoyMerlin/img/llave_inglesa.jpg" alt="Llave Inglesa" class="producto-img">
+                        <h2 class="producto-title">Key Inglesa</h2>
+                        <p class="producto-desc">Gira mucho</p>
+                        <p class="producto-price">Precio: 100$</p>
+                        <button class="producto-btn">Comprar</button>
+                    </div>
+                    <div class="producto">
+                        <img src="/home/user/Documentos/Practicas/T11_Web-LeRoyMerlin/img/martillo.jpg" alt="Martillo" class="producto-img">
+                        <h2 class="producto-title">Martillo</h2>
+                        <p class="producto-desc">Fortalece amistades</p>
+                        <p class="producto-price">Precio: 200$</p>
+                        <button class="producto-btn">Comprar</button>
+                    </div>
+                    <div class="producto">
+                        <img src="img/sierra.jpg" alt="Sierra" class="producto-img">
+                        <h2 class="producto-title">Sierra</h2>
+                        <p class="producto-desc">Esto es más cortante que mi ex</p>
+                        <p class="producto-price">Precio: 300$</p>
+                        <button class="producto-btn">Comprar</button>
+                    </div>
+                    <div class="producto">
+                        <img src="img/taladro.jpg" alt="Taladro" class="producto-img">
+                        <h2 class="producto-title">Taladro</h2>
+                        <p class="producto-desc">Perfora igual que la mujer al bolsillo</p>
+                        <p class="producto-price">Precio: 300$</p>
+                        <button class="producto-btn">Comprar</button>
+                    </div>
                 </div>
-                <div class="producto">
-                    <img src="img/martillo.jpg" alt="Producto 2" class="producto-img">
-                    <h2 class="producto-title">Martillo</h2>
-                    <p class="producto-desc">Forjado en el mismo sitio que la llave inglesa</p>
-                    <p class="producto-price">Precio: 200$</p>
-                    <button class="producto-btn">Comprar</button>
-                </div>
-                <div class="producto">
-                    <img src="img/sierra.jpg" alt="Producto 3" class="producto-img">
-                    <h2 class="producto-title">Sierra</h2>
-                    <p class="producto-desc">Esto es más cortante que mi ex</p>
-                    <p class="producto-price">Precio: 300$</p>
-                    <button class="producto-btn">Comprar</button>
-                </div>
-                <div class="producto">
-                    <img src="img/taladro.jpg" alt="Producto 4" class="producto-img">
-                    <h2 class="producto-title">Taladro</h2>
-                    <p class="producto-desc">Perfora igual que la mujer el bolsillo</p>
-                    <p class="producto-price">Precio: 300$</p>
-                    <button class="producto-btn">Comprar</button>
-                </div>
-            </div>
-        </section>
-    </article>
+            </section>
+        </article>
+        <aside class="aside">
+            <h2 class="aside-title">Categorías</h2>
+            <ul class="aside-list">
+                <li><a href="#" class="aside-link">Herramientas</a></li>
+                <li><a href="#" class="aside-link">Electrodomésticos</a></li>
+                <li><a href="#" class="aside-link">Muebles</a></li>
+                <li><a href="#" class="aside-link">Jardinería</a></li>
+            </ul>
+        </aside>
+    </main>
+    <footer>
+        Derechos reservados &copy; 2025
+    </footer>
 </body>
 </html>
