--- a/trimestre_2/P4_Agenda/index.html
+++ b/trimestre_2/P4_Agenda/index.html
@@ -5,23 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda</title>
     <link rel="stylesheet" href="css/style.css">
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const formSection = document.getElementById('form');
-            const minWidth = 600; // Ajusta este valor según tus necesidades
-
-            function checkWidth() {
-                if (window.innerWidth < minWidth) {
-                    formSection.classList.add('hidden');
-                } else {
-                    formSection.classList.remove('hidden');
-                }
-            }
-
-            window.addEventListener('resize', checkWidth);
-            checkWidth();
-        });
-    </script>
 </head>
 <body>
     <section id="list">
@@ -37,13 +20,23 @@
             <div class="contacto"><img src="img/Contacto.png" alt="contacto"><h3>Pablo Motos</h3></div>
         </article>
     </section>
-    <section id="form">
+    <section id="formulario" class="hidden">
         <h1 id="titulo">Titulo</h1>
         <form action="php/insert.php" method="post">
             <input type="text" name="name" placeholder="Nombre" id="nombre" required>
+            <br><br>
+            <select name="prefijo" id="prefijoTlf">
+                <option value="34">+34</option>
+                <option value="33">+33</option>
+                <option value="39">+39</option>
+                <option value="1">+1</option>
+            </select>
             <input type="number" name="phone" placeholder="Telefono" id="telefono" required>
+            <br><br>
             <input type="email" name="email" placeholder="Email" id="email">
-            <input type="text" name="empresa" placeholder="Email" id="empresa">
+            <br><br>
+            <input type="text" name="empresa" placeholder="Empresa" id="empresa">
+            <br><br>
             <button type="submit">Guardar</button>
         </form>
     </section>
