--- a/trimestre_2/P4_Agenda/index.html
+++ b/trimestre_2/P4_Agenda/index.html
@@ -33,7 +33,7 @@
         <form action="php/insert.php" method="post">
             <input type="text" name="name" placeholder="Nombre" id="nombre" required>
             <br><br>
-            <select name="prefijo" id="prefijoTlf">
+            <select name="prefijo" id="prefijoTlf" required>
                 <option value="34">+34</option>
                 <option value="33">+33</option>
                 <option value="39">+39</option>
@@ -48,6 +48,26 @@
             <button type="submit">Guardar</button>
         </form>
     </section>
+    <dialog id="dialogo">
+        <h1>Titulo</h1>
+        <form action="" method="post">
+            <input type="text" name="name" placeholder="Nombre" id="nombre" required>
+            <br><br>
+            <select name="prefijo" id="prefijoTlf" required>
+                <option value="34">+34</option>
+                <option value="33">+33</option>
+                <option value="39">+39</option>
+                <option value="1">+1</option>
+            </select>
+            <input type="number" name="phone" placeholder="Telefono" id="telefono" required>
+            <br><br>
+            <input type="email" name="email" placeholder="Email" id="email">
+            <br><br>
+            <input type="text" name="empresa" placeholder="Empresa" id="empresa">
+            <br><br>
+            <button type="submit">Guardar</button>
+        </form>
+    </dialog>
 
     <script>
         function checkScreenSize() {
