--- a/T12_Panaderia/index.html
+++ b/T12_Panaderia/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +7,42 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <a href="index.html">
-                <img src="logo.png" alt="Logo de la página" class="logo-img">
-            </a>
-        </div>
-        <nav class="nav">
-            <ul class="nav-list">
-                <li><a href="panaderia.html">Panadería</a></li>
-                <li><a href="bolleria.html">Bollería</a></li>
-                <li><a href="pasteleria.html">Pastelería</a></li>
-                <li class="language-dropdown">
-                    <a href="#" class="language-link">Idioma</a>
-                    <ul class="language-menu">
-                        <li><a href="?lang=es">Español</a></li>
-                        <li><a href="?lang=pt">Português</a></li>
+    <header>
+        <nav class="menu">
+            <a href=""><img src="" alt="Logo" class="logo"></a>
+            <ul class="menu-list">
+                <li><a href="">Panadería</a></li>
+                <li><a href="">Pastelería</a></li>
+                <li><a href="">Bollería</a></li>
+                <li class="lenguage">
+                    Idioma
+                    <ul class="lenguage-list">
+                        <li><a href="ES/index">🇪🇸 Español</a></li>
+                        <li><a href="PT/index">🇵🇹 Portugues</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
     </header>
+    <main>
+        
+
+
+
+        
+    </main>
+    <footer>
+        <div class="redes">
+            <a href=""><img src="" alt="Facebook"></a>
+            <a href=""><img src="" alt="Instagram"></a>
+            <a href=""><img src="" alt="Twitter"></a>
+        </div>
+        <p>© 2025 Migas Amigas</p>
+        <div class="contacto">
+            <a href="">Contacto</a>
+            <a href="">Aviso Legal</a>
+            <a href="">Política de Privacidad</a>
+        </div>
+    </footer>
 </body>
 </html>
