--- a/T12_Panaderia/index.html
+++ b/T12_Panaderia/index.html
@@ -25,11 +25,18 @@
         </nav>
     </header>
     <main>
-        
-
-
-
-        
+        <section>
+            <h1>¿Quiénes somos?</h1>
+            <p>Somos una panadería artesanal ubicada en el corazón de la ciudad, dedicada a ofrecer productos locales y de alta calidad.</p>
+        </section>
+        <section>
+            <h1>¿Donde está nuestro local?</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.001736247052!2d-6.154989925323616!3d36.409153289647186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd0c35515ca7474d%3A0xe3a2331041b7fd34!2sPanaderia%20Migas%20Amigas!5e0!3m2!1ses!2ses!4v1737892919058!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+        <section>
+            <h1>¿Como hacemos nuestros productos artesanales?</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/v8F6yJt1ULo?si=c7MUB4AOlK1MvnmP&amp;start=30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
     </main>
     <footer>
         <div class="redes">
