--- a/T12_Panaderia/index.html
+++ b/T12_Panaderia/index.html
@@ -17,12 +17,12 @@
                 <li class="lenguage">
                     Idioma
                     <ul class="lenguage-list">
-                        <li><a href="ES/index">🇪🇸 Español</a></li>
-                        <li><a href="PT/index">🇵🇹 Portugues</a></li>
+                        <li><a href="ES/index.html">🇪🇸 Español</a></li>
+                        <li><a href="PT/index.html">🇵🇹 Portugues</a></li>
                     </ul>
                 </li>
             </ul>
-        </nav>
+        </nav>                                                                                                                                                                 
     </header>
     <main>
         <section>
@@ -35,7 +35,7 @@
         </section>
         <section>
             <h1>¿Como hacemos nuestros productos artesanales?</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/v8F6yJt1ULo?si=c7MUB4AOlK1MvnmP&amp;start=30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <!-- TODO hacer carrousel -->
         </section>
     </main>
     <footer>
